<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.home.test1.MainActivityTest"
    android:background="#e0e0e0">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#e0e0e0"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/communal_service"
                    android:id="@+id/textView"
                    android:textColor="@android:color/black"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/working"
                    android:id="@+id/textView3"
                    android:textColor="@android:color/white"
                    android:inputType="text"
                    android:textIsSelectable="false"
                    android:background="@drawable/rectangle_rounded" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/sep"
                android:id="@+id/textView14" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="245dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/title_made"
                    android:id="@+id/textView15" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/data_made"
                    android:id="@+id/textView16"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/sep"
                android:id="@+id/textView2" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="1">

                <TextView
                    android:layout_width="245dp"
                    android:layout_height="20dp"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/title_reg"
                    android:id="@+id/textView4" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/data_reg"
                    android:id="@+id/textView8"
                    android:textColor="@android:color/black" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/sep"
                android:id="@+id/textView6" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="245dp"
                    android:layout_height="20dp"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/title_dec"
                    android:id="@+id/textView5" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/data_dec"
                    android:id="@+id/textView7"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/sep"
                android:id="@+id/textView9" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="171dp"
                    android:layout_height="20dp"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/title_org"
                    android:id="@+id/textView10" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/org"
                    android:id="@+id/textView11"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/sep"
                android:id="@+id/textView12" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/text_ukr"
                android:id="@+id/textView13"
                android:textColor="@android:color/black" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="170dp"
                    android:layout_height="150dp"
                    android:id="@+id/imageView"
                    android:layout_marginBottom="79dp"
                    android:src="@drawable/pic1"
                    android:contentDescription="" />

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="150dp"
                    android:id="@+id/imageView2" />

                <ImageView
                    android:layout_width="170dp"
                    android:layout_height="150dp"
                    android:id="@+id/imageView3"
                    android:src="@drawable/pic2" />
            </LinearLayout>
            <!-- [Comment] Lot of hardcode -->
        </LinearLayout>


    </ScrollView>

</RelativeLayout>
